--- a/indexmenu.html
+++ b/indexmenu.html
@@ -52,7 +52,7 @@
                     Studie
                 </div>
             </a>
-            <a href="">
+            <a href="indexhobby.html">
                 <div class="menu-text">
                     Hobby
                 </div>
