--- a/indexstudie.html
+++ b/indexstudie.html
@@ -33,7 +33,9 @@
     </header>
     <div class="studiemid">
        <div class="studiemid-top">
-            <img src="image/study.png" alt="" class="rotating-image">
+            <div  class="rotating-image">
+                
+            </div>
        </div>
        <div class="studiemid-mid">
             <div class="studiemid-mid-left">
