Alleen contact niet gedaan

--- a/indexmenu.html
+++ b/indexmenu.html
@@ -57,12 +57,8 @@
                     Hobby
                 </div>
             </a>
-            <a href="">
-                <div class="menu-text">
-                    Gamer
-                </div>
-            </a>
-            <a href="">
+            
+            <a href="indexcontact.html">
                 <div class="menu-text">
                     Contact
                 </div>
