--- a/indexshit.html
+++ b/indexshit.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rotating Energy Ball</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #3498db, #c0392b);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+    }
 
-        #energy-container {
-            position: relative;
-            width: 200px;
-            height: 200px;
-        }
+    .content-container {
+      position: relative;
+    }
 
-        #energy-ball {
-            width: 50px;
-            height: 50px;
-            background-color: #e74c3c;
-            border-radius: 50%;
-            position: absolute;
-            animation: rotateAnimation 3s linear infinite;
-        }
+    .white-box {
+      width: 800px;
+      height: 500px;
+      background-color: white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-        @keyframes rotateAnimation {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
+    .contact-text {
+      font-size: 200px;
+    }
+  </style>
+  <title>Contact Page</title>
 </head>
 <body>
-
-    <div id="energy-container">
-        <div id="energy-ball"></div>
+  <div class="content-container">
+    <div class="white-box">
+      <div class="contact-text">Contact</div>
     </div>
-
+  </div>
 </body>
 </html>
