--- a/index.html
+++ b/index.html
@@ -178,9 +178,25 @@
         </div>
     </div>
     
-
+    <div class="line"></div>
     <footer>
-        
+        <div class="footer-vlak">
+            <a href="index.html">
+            <div class="footer-text">
+                About
+            </div>
+            </a>
+            <a href="indexmenu.html">
+                <div class="footer-text">
+                    Menu
+                </div>
+            </a>
+            <a href="indexcontact.html">
+                <div class="footer-text">
+                    Contact
+                </div>
+            </a>
+        </div>
     </footer>
 </body>
 </html>
