--- a/indexcontact.html
+++ b/indexcontact.html
@@ -11,6 +11,7 @@
     <link rel="script" href="main.js">
 </head>
 <body>
+    <div class="body-1">
     <header>
         <div class="logo2">
             <svg xmlns="http://www.w3.org/2000/svg" width="51" height="90" viewBox="0 0 51 90" fill="none">
@@ -20,15 +21,67 @@
                 <path d="M25.5 10.9756L38.9796 18.1097L25.5 20L12 18.1097L25.5 10.9756Z" fill="white"/>
                 </svg>
         </div>
-        <div class="menu">
+        <div class="menu4">
             <a href="indexmenu.html">
-            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="32" viewBox="0 0 70 32" fill="none" >
-                <line x1="5" y1="0.5" x2="64" y2="0.5" stroke="black"/>
-                <line y1="16.5" x2="70" y2="16.5" stroke="black"/>
-                <line x1="5" y1="31.5" x2="64" y2="31.5" stroke="black"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="32" viewBox="0 0 70 32" fill="none" class="menu-logo">
+                <line x1="5" y1="0.5" x2="64" y2="0.5" stroke="grey"/>
+                <line y1="16.5" x2="70" y2="16.5" stroke="grey"/>
+                <line x1="5" y1="31.5" x2="64" y2="31.5" stroke="grey"/>
             </svg>
             </a>
         </div>
     </header>
+    <div class="contactmid">
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text-1">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text-1">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text-1">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text-1">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text-1">
+            Contact Contact Contact Contact Contact
+        </div>
+        <div class="contactmid-text">
+            Contact Contact Contact Contact Contact
+        </div>
+    </div>
+    <div class="contactmid-vlak">
+        <div class="contactmid-vlak-in">
+            <div class="contactmid-vlak-in-1">
+                <label for="name" class="contact-text">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email" class="contact-text">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message" class="contact-text">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+                
+                <button type="submit" class="submit">Submit</button>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
