--- a/indexhobby.html
+++ b/indexhobby.html
@@ -212,6 +212,26 @@
                 </div>
             </div>
             <div class="red-line"></div>
+            
+        </div>
+        <div class="foot">
+            <div class="footer-vlak">
+                <a href="index.html">
+                <div class="footer-text">
+                    About
+                </div>
+                </a>
+                <a href="indexmenu.html">
+                    <div class="footer-text">
+                        Menu
+                    </div>
+                </a>
+                <a href="indexcontact.html">
+                    <div class="footer-text">
+                        Contact
+                    </div>
+                </a>
+            </div>
         </div>
         
     </div>
