--- a/indexstudie.html
+++ b/indexstudie.html
@@ -49,7 +49,7 @@
             </div>
        </div>
        <div class="line"></div>
-       <div class="studiemid-mid2">
+       <div class="studiemid-mid">
             <div class="studiemid-mid-left">
                 ICT Medewerker
             </div>
@@ -62,7 +62,7 @@
             
         </div>
        <div class="line"></div>
-       <div class="studiemid-mid2">
+       <div class="studiemid-mid">
             <div class="studiemid-mid-left">
                 Assistent bouwen
             </div>
@@ -75,7 +75,7 @@
         
         </div>
         <div class="line"></div>
-       <div class="studiemid-mid2">
+       <div class="studiemid-mid">
             <div class="studiemid-mid-left">
                 Pontem College
             </div>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="line"></div>
-       <div class="studiemid-mid2">
+       <div class="studiemid-mid">
             <div class="studiemid-mid-left">
                 Chinese middelbare school
             </div>
@@ -103,7 +103,23 @@
     </div>
     <div class="line"></div>
     <div class="foot">
-
+        <div class="footer-vlak">
+            <a href="index.html">
+            <div class="footer-text">
+                About
+            </div>
+            </a>
+            <a href="indexmenu.html">
+                <div class="footer-text">
+                    Menu
+                </div>
+            </a>
+            <a href="indexcontact.html">
+                <div class="footer-text">
+                    Contact
+                </div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
