--- a/indexmenu.html
+++ b/indexmenu.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Permanent+Marker&family=Roboto&family=Rubik&family=Silkscreen&display=swap" rel="stylesheet">
     <link rel="script" href="main.js">
 </head>
 <body>
+    <div class="body-menu">
     <header>
         <div class="logo2">
             <svg xmlns="http://www.w3.org/2000/svg" width="51" height="90" viewBox="0 0 51 90" fill="none">
                 <path d="M25.5 90L21.7716 46.0976H29.2284L25.5 90Z" fill="#B92D2D"/>
                 <path d="M25.5 52.6829L3.41635 13.1707L47.5836 13.1707L25.5 52.6829Z" fill="#B92D2D"/>
-                <path d="M25.5 41.7073L12.0204 18.1097L38.9796 18.1097L25.5 41.7073Z" fill="white"/>
-                <path d="M25.5 10.9756L38.9796 18.1097L25.5 20L12 18.1097L25.5 10.9756Z" fill="white"/>
+                <path d="M25.5 41.7073L12.0204 18.1097L38.9796 18.1097L25.5 41.7073Z" fill="#3a1111"/>
+                <path d="M25.5 10.9756L38.9796 18.1097L25.5 20L12 18.1097L25.5 10.9756Z" fill="#3a1111"/>
                 </svg>
         </div>
-        <div class="menu">
+        <div class="menu4">
             <button id="closeButton">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="49" viewBox="0 0 50 49" fill="none">
-                <line x1="0.646447" y1="47.7739" x2="47.7739" y2="0.646448" stroke="black"/>
-                <line x1="1.53202" y1="0.824929" x2="48.6607" y2="47.9536" stroke="black"/>
+                <line x1="0.646447" y1="47.7739" x2="47.7739" y2="0.646448" stroke="white"/>
+                <line x1="1.53202" y1="0.824929" x2="48.6607" y2="47.9536" stroke="white"/>
             </svg>
             </button>
             <script>
@@ -65,14 +67,10 @@
             </a>
         </div>
         <div class="menu-img-vlak">
-            <div class="menu-img">
-                <img src="image/rocgebow.jpg" alt="" class="menu-img">
-            </div>
-            <div class="menu-img">
-                <img src="image/rocgebow.jpg" alt="" class="menu-img">
-            </div>
+            
         </div>
         
+    </div>
     </div>
    
 </body>
