--- a/indexshit.html
+++ b/indexshit.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #3498db, #c0392b);
+      background: linear-gradient(to right, #d400ff, #00d9ff);
       color: white;
       display: flex;
       align-items: center;
